--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.jar filter=lfs diff=lfs merge=lfs -text
+assets filter=lfs diff=lfs merge=lfs -text
+lib/** filter=lfs diff=lfs merge=lfs -text
+assets/** filter=lfs diff=lfs merge=lfs -text
